Calculator will convert up to Quadrillions

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <form action="<%= converters_path %>">
   What number would you like converted?<br/>
-  <input type="number" name="number"/>
+  <input type="text" name="number"/>
   <input type="submit" value="Submit"/>
 </form>
